# vr-pi-backend

./: .eslintrc.js  .gitignore  .yarnrc.yml  Cargo.toml  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: sync-to-gitee.yml
src/: index.ts  main.rs  sensor.rs  server.rs  webrtc.rs
src/server/: message.rs  mod.rs  sensor.rs  webrtc.rs
static/: index.html  index.ts  websocket.html
