[package]
name = "vr-pi-backend"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.4"

rand = "0.7"
bytes = "0.6"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.8"
serde = "1"
serde_json = "1"