[package]
name = "websocket"
version = "0.1.0"
authors = ["YXL <chenxin.lan.76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11"
tokio = { version = "0.3", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.12"